--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -19,4 +19,11 @@
       display: none;
     }
   }
-  
+  @media (max-width: 768px) {
+    #about {
+        padding-bottom: 0.25rem; /* Slightly larger padding on mobile */
+    }
+    #skills_coursework {
+        padding-top: 0.25rem; /* Slightly larger padding on mobile */
+    }
+}
