--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -27,3 +27,18 @@
         padding-top: 0.25rem; /* Slightly larger padding on mobile */
     }
 }
+
+@media (max-width: 768px) {
+  #experience {
+      margin: 1rem;
+  }
+
+  .experience-details {
+      flex-direction: column;
+      align-items: start;
+  }
+
+  .icon {
+      margin-bottom: 10px;
+  }
+}
