--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -145,12 +146,12 @@ a:hover {
 
 /* sections */
 
+
 section {
-    padding-top: 4vh;
-    height:96vh;
-    margin: 0 10rem;
-    box-sizing:border-box;
-    min-height:fit-content;
+    height: auto; /* Instead of 96vh or any fixed height */
+    margin: 2rem 10rem; /* Side margins */
+    padding: 2rem; /* Padding around content */
+    box-sizing: border-box;
 }
 
 .section-container {
@@ -283,6 +284,7 @@ section {
     gap: 2rem;
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 3rem;
     padding: 2rem 0;
     flex-wrap: wrap; /* allow wrapping on smaller screens */
   }
@@ -396,20 +398,66 @@ section {
 }
 
 
-section {
-    margin: 0 10rem;
-    padding: 2rem;
-    background: #fff; 
-    box-sizing: border-box;
-    overflow: hidden;
+#experience, #projects {
+    margin-bottom: 4rem; 
+} 
+.container { 
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
+/*projects*/
 
-#experience {
-    margin-bottom: 2rem; 
-}
-#projects {
-    margin-top: 2rem; 
-    clear: both; 
+
+.projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; /* This will evenly space the boxes */
+    gap: 20px;
 }
 
+.project-box {
+    flex: 1 1 30%; /* Keeps three boxes per row */
+    max-width: 31%; /* Ensures no more than three boxes per row considering padding and margins */
+    background: white;
+    padding: 20px; /* Increased padding for better spacing of content */
+    margin: 10px; /* Optional: adds space between the boxes */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-box h3 {
+    margin-bottom: 0.5rem;
+}
+
+.project-box ul {
+    width: 100%;
+    list-style: inside;
+    padding-left: 1rem;
+    text-align: left;
+    margin-bottom:1rem;
+}
+
+.github-btn {
+    margin-top: auto; /* Pushes the button to the bottom of the box */
+    background-color: #333; /* Dark grey, similar to GitHub's color scheme */
+    color: white;
+    padding: 5px 10px; /* Increase padding for a bigger button */
+    border-radius: 15px; /* Makes the button more rounded */
+    font-size: 0.8rem;
+    transition: background-color 300ms ease; /* Smooth transition for hover effect */
+    font-weight:600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width:8rem;
+    border-radius:2rem;
+}
+
+.github-btn:hover {
+    background-color: #555; /* Lightens the button on hover */
+}
