--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,45 +1,130 @@
-/* show hamburger nav only on small screens */
-@media screen and (max-width: 768px) {
-    #desktop-nav {
+@media (max-width: 768px) {
+  body {
+      font-size: 14px; 
+  }
+
+  section {
+      margin: 1rem; 
+      padding: 1rem; 
+  }
+
+  .title, .experience-sub-title {
+      font-size: 2rem; 
+  }
+
+  .btn, .github-btn {
+      width: 100%;
+      padding: 12px;
+      font-size: 1rem;
+  }
+
+  .icon {
+      width: 35px;
+      height: 35px;
+  }
+}
+@media (max-width: 768px) {
+  #desktop-nav {
       display: none;
-    }
-  
-    #hamburgernav {
+  }
+
+  #hamburgernav {
+      display: flex; 
+      padding: 0 1rem;
+      align-items:right;
+  }
+
+  .hamburgermenu {
       display: flex;
       justify-content: space-between;
+  }
+
+  .menulinks {
+      display: block; 
+      position: static;
+  }
+}
+@media (max-width: 768px) {
+  #profile {
+      flex-direction: column;
       align-items: center;
-      padding: 0 2rem;
-      height: 10vh;
-    }
+      height: auto;
   }
-  
-  /* show desktop nav only on larger screens */
-  @media screen and (min-width: 769px) {
-    #hamburgernav {
-      display: none;
-    }
+
+  .section_pic-container img {
+      width: 95%;
+      height: auto;
+      align-items:center;
+      margin-bottom: 0.5rem; 
   }
-  @media (max-width: 768px) {
-    #about {
-        padding-bottom: 0.25rem; 
-    }
-    #skills_coursework {
-        padding-top: 0.25rem;
-    }
+
+  .section_text {
+      text-align: center;
+  }
+
+  #socials-container {
+      justify-content: center;
+      margin-top: 1rem;
+  }
 }
 
 @media (max-width: 768px) {
   #experience {
-      margin: 1rem;
+      padding: 1rem; 
+      margin: 0.5rem; 
   }
 
   .experience-details {
       flex-direction: column;
-      align-items: start;
-  }
-
-  .icon {
-      margin-bottom: 10px;
+      align-items: center;
   }
 }
 
+@media (max-width: 768px) {
+  #projects{
+    width:100%;
+  }
+  .projects-container {
+      flex-direction: column; 
+  }
+
+  .project-box {
+    flex: none;
+    max-width: none;
+      width: 100%;
+      margin: 10px 0; 
+      text-align: center;
+      box-shadow: none; 
+  }
+}
+
+@media (max-width: 768px) {
+  #contact {
+      background-color: transparent;
+      padding: 1rem;
+  }
+
+  .contact-container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  #contact h1 {
+    margin-bottom:0.5rem;
+  }
+
+  .contact-item {
+      width: 100%;
+      text-align: center;
+      margin: 10px 0; 
+  }
+  @media (max-width: 768px) {
+    .skills-details-container {
+        flex-direction: column;
+    }
+
+    .skills-container, .coursework-container {
+        width: 100%;
+    }
+}
+}
