--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -128,3 +128,67 @@
     }
 }
 }
+
+@media screen and (max-width: 1200px) {
+    section {
+        margin: 2rem 5rem;
+    }
+    
+    #profile {
+        padding: 0 5rem;
+    }
+    
+    #contact {
+        padding: 3rem 5rem;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .project-box {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    
+    .section_text {
+        padding: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #desktop-nav {
+        display: none;
+    }
+    
+    #hamburgernav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2rem;
+        height: 17vh;
+        background-color: white;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
+    
+    section {
+        margin: 2rem 1rem;
+    }
+    
+    #profile {
+        padding: 0 1rem;
+    }
+    
+    #contact {
+        padding: 3rem 1rem;
+    }
+    
+    .title {
+        font-size: 3rem;
+    }
+    
+    .section_text_p2 {
+        font-size: 1.5rem;
+    }
+}
